--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
