--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-phone-input-2": "^2.15.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
