--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18.2.0",
     "react-phone-input-2": "^2.15.1",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
