--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@ramonak/react-progress-bar": "^5.1.1",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "firebase": "^10.5.0",
